@@ -16,6 +16,8 @@ Beta   1.0.4 - 2009-03-xx
 
 - Implemented MySQL_ConnectionMetaData::supportsConvert(from, to). (Andrey)
 
+- Introduced sql::DataType::YEAR to complement MySQL's YEAR type. (Andrey)
+
 
 Alpha  1.0.3 - 2009-03-03
 
